# GalTransl

./: .gitignore  README.md  README_EN.md  pyproject.toml  requirements.txt  requirements_gui.txt  run.bat  run_GUI.py  run_GalTransl.py  upgrade_requirements.bat
.github/workflows/: main.yml
Dict/: 00通用字典_符号_译后.txt  00通用字典_译前.txt  00通用字典_译后.txt  01H字典_矫正_译前.txt  GPT字典.txt
GalTransl/: Baseplugin.py  BingGPT4Translate.py  CChatGPTTranslate.py  COpenAI.py  CSentense.py  CSerialize.py  CSplitter.py  CTranslate.py  Cache.py  ConfigHelper.py  Dictionary.py  GPT3Translate.py  GPT4Translate.py  GTPlugin.py  ITranslater.py  Loader.py  Name.py  Problem.py  Runner.py  StringUtils.py  Utils.py  __init__.py  __main__.py
GalTransl/Backend/: BaseTranslate.py  BingGPT4Translate.py  CaiyunTranslate.py  GPT3Translate.py  GPT4Translate.py  Prompts.py  RebuildTranslate.py  SakuraTranslate.py
GalTransl/Frontend/: Caiyun.py  GPT.py  LLMTranslate.py
GalTransl/yapsy/: AutoInstallPluginManager.py  ConfigurablePluginManager.py  FilteredPluginManager.py  IMultiprocessChildPlugin.py  IMultiprocessPlugin.py  IPluginLocator.py  MultiprocessPluginManager.py  MultiprocessPluginProxy.py  PluginFileLocator.py  PluginInfo.py  PluginManager.py  PluginManagerDecorator.py  (+2 more)
command/: __init__.py  component.py  cursor.py  input.py  keymap.py  utils.py
plugins/: readme.md
sampleProject/: config.inc.yaml  config.yaml.inc  项目GPT字典.txt  项目字典_译前.txt  项目字典_译后.txt
transl_api/: caiyun_transl_api.py  newbing_transl_api.py
ui/: OtherCustomWidgets.py  RunWidgets.py  WriteYAMLWidgets.py  __init__.py
(+88 files in other folders)
