[tool.poetry]
name = "galtransl"
version = "2.4.0"
description = "GalTransl是一套将数个基础功能上的微小创新与对ChatGPT提示工程（Prompt Engineering）的深度利用相结合的galgame自动化翻译工具包，用于制作内嵌式翻译补丁。"
authors = ["cx2333"]
license = "GNU GPLv3"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
edgegpt = "^0.10.16"
requests = "^2.31.0"
revchatgpt = "^6.8.1"
ttkbootstrap = "^1.10.1"
zhconv = "^1.4.3"
pyyaml = "^6.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
